# trystendaibot

./: .env.example  .gitignore  README.md  bot.db  config.py  database.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: config.py  scheduler.py  states.py
bot/database/: db.py  repo.py
bot/handlers/: __init__.py  admin.py  user.py
bot/keyboards/: admin.py  user.py
bot/middlewares/: error_handler.py  throttling.py
bot/services/: sub_checker.py  vpn.py
bot/utils/: qr.py
database/: bot.db  database.py  db.py
handlers/: admin_handlers.py  admin_panel.py  user.py  user_handlers.py
keyboards/: menu.py
services/: sub_checker.py  vpn.py
tests/: conf_test.py  conftest.py  test_config.py  test_config_and_qr.py  test_db.py  test_qr.py  test_rate_limiter.py  test_throttling.py  test_vpn_service.py
utils/: error_handler.py  qr.py  rate_limiter.py
