[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "trystendai-bot"
dynamic = ["version"]
requires-python = ">=3.11,<=3.14"

dependencies = [
    "django-qrcode>=0.3",
    "pytelegrambotapi>=4.33.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88