[project]
name = "trystendai-bot"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "aiogram>=3.7.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.3.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.0",
    "redis>=5.0.0",
    "qrcode[pil]>=7.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
# Плагин учит mypy, что поля pydantic-settings берутся из .env,
# иначе Settings() ругается на "missing named argument".
plugins = ["pydantic.mypy"]